--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.8.7",
-    "@babel/runtime-corejs3": "^7.8.7"
+    "@babel/runtime-corejs3": "^7.8.7",
+    "n3": "^1.3.5"
   }
 }
